<resources>
    <string name="app_name">Ineed</string>

    <!--Global-->
    <string name="internetConnection">App is not able to get connected due to internet connection, please check your internet connectivity</string>
    <string name="fieldsmeand">All fields are Mandatory</string>
    <string name="validemail">Please Enter Valid userid</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="contiue">Continue</string>
    <string name="emptyemail">Email is empty</string>

    <!--Splash Screen-->
    <string name="sellorbuy">Sell/Buy</string>
    <string name="consultant">Consultant</string>
    <string name="jobs">Jobs</string>
    <string name="investment">Investment</string>

    <!--LOGIN-->
    <string name="email">Username</string>

    <string name="password">Password</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="login">LOG IN</string>
    <string name="skip">Skip</string>

    <!--Forget Password-->
    <string name="recoverpass">We just need your registered Email id to send you password Reset instructions.</string>

    <!--SIGNUP-->
    <string name="areyoua">Are you a</string>
    <string name="jobseeker">Jobseeker</string>
    <string name="or">or</string>
    <string name="employer">Employer</string>
    <string name="step1signup">Enter Personal Details</string>
    <string name="step2signup">Select Packages</string>
    <string name="step3signup">Make Payment</string>
    <string name="username">USERNAME</string>
    <string name="emailadd">EMAIL ADDRESS</string>
    <string name="pass">PASSWORD</string>
    <string name="confipass">CONFIRM PASSWORD</string>
    <string name="next">NEXT</string>
    <string name="confirequal">Password and Confirm Password doesn\'t match</string>

    <string name="help">How can we help you?</string>
    <string name="searchname">Cook</string>
    <string name="about">HSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="resetpass">Reset password</string>
    <string name="contactus">Contact Us</string>
    <string name="help_drawer">Help</string>

    <string name="select_package">Select Package</string>

    <!--Home Activity-->
    <string name="dashboard">DashBoard</string>
    <string name="updateprofile">Update Profile</string>
    <string name="changepassword">Change Password</string>
    <string name="upgradesubscription">Upgrade Subscription</string>

    <string name="abouttitle">About Us</string>
    <string name="terms">Terms of Use</string>
    <string name="Logout">Log Out</string>

    <string name="search1">Search</string>
    <string name="filter">Filter</string>
    <string name="profileview">Profile Viewed</string>


    <string name="personal">Personal</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="phone">Phone</string>
    <string name="email_id">Email</string>

    <!-- Profile-->
    <string name="contact">Contact no</string>
    <string name="designation">Designation</string>
    <string name="experience">Experience</string>
    <string name="resume">Resume</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="skills">Skills</string>
    <string name="current_exp">Current</string>

    <string name="workexper">Work experience</string>
    <string name="education">Education</string>

    <string name="proftitle">Profile Title:</string>
    <string name="totalexp">Total Experience:</string>
    <string name="largesttimesizehandled">Largest Team Size Handled:</string>
    <string name="currentsalary">Current/Latest Annual Salary:</string>
    <string name="noticeperiod">Notice Period:</string>

    <string name="plandetails">Plan details</string>
    <string name="packkage">Package</string>
    <string name="Expired">Package Expiry Date</string>
    <string name="creditpoint">Credit Point</string>
    <string name="credituse">Credit Use</string>
    <string name="creditleft">Credit Left</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--fragment job seeker-->

    <string name="language_select">Please select language</string>

    <!--fragment jobseeker dashboard-->
    <string name="txtNameViewProfile"> Viewed by employer</string>
    <string name="txtExpiryDate">Expiry Date</string>
    <string name="txtCurrentPlan">Current Plan</string>
    <string name="txtMyProfile">My Profile</string>


    <!--jobseeker profile-->
    <string name="txtWorkPermit_name">Indian, with Saudi arabia\n work permit</string>
    <string name="txtDesignation">Php Developer</string>
    <string name="txtName">Harish Kumar Shakya</string>
    <string name="txtAge">" "( Age 29 yr )</string>
    <string name="txtMobile">+91-995891919</string>
    <string name="txtEmail">Harishkumar12@gmail.com</string>
    <string name="txtObjectvie">My objective</string>
    <string name="txtSkillsValue">PHP, HTML </string>
    <string name="txtObjValue">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>

    <!--work experience view-->

    <string name="txtJobTitle">Job Title</string>
    <string name="txtCompanyName">Company Name</string>
    <string name="txtWorkingFrom">Working From</string>
    <string name="txtNotice">Notice</string>
    <string name="txtIndustry">Industry</string>
    <string name="txtDepartment">Department</string>
    <string name="txtAdd">Add</string>
    <!--education course title -->
    <string name="edu_course_title">Course Title </string>
    <string name="edu_Specialization">Specialization </string>
    <string name="edu_institute">Institute </string>
    <string name="edu_year">Year </string>

    <!--resume view-->
    <string name="resume_view">View </string>
    <string name="resume_download">Download </string>
    <string name="my_resume">My Resume </string>

    <string name="age">Age</string>
    <string name="workpermit">Work Permit</string>
    <string name="salary">Salary</string>
    <string name="phonenumber">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
