<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/toolbar"></include>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recoverpass"
        android:padding="20dp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/simplerectangle"
        android:padding="8dp"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:layout_margin="15dp"
        android:hint="@string/emailadd"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txt_forgetpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="15dp"
        android:text="@string/contiue"
        android:gravity="center"
        android:background="@color/appbasecolor"
        android:textColor="@color/white"/>
</LinearLayout>
