<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@drawable/lock1"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_over"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/txt_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/areyoua"
                android:textSize="18sp"
                android:padding="5dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/overjob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/jobseeker"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/overemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/employer" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>