<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    tools:context="com.androidtutorialpoint.ineed.proj.activities.LoginActivity">
    <TextView
        android:id="@+id/txt_skp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textColor="@color/appbasecolor"
        android:gravity="end"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="15dp"
        android:layout_marginBottom="25dp"
     >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiet_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:hint="@string/email">
        
    </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone">

        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/txt_forgetpass"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpass"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="end|right"/>
        <TextView
            android:onClick="loginclick"
            android:id="@+id/login"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@color/appbasecolor"/>
        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
