<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="5dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="5dp"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
                android:hint="@string/username">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_emailadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                android:hint="@string/emailadd"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:imeOptions="actionNext">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_confipassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                android:hint="@string/confipass"
                android:inputType="textPassword"
                android:imeOptions="actionDone">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="3dp"
            >
        <Button
            android:id="@+id/bt_next"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:padding="10dp"
            android:background="@color/appbasecolor"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/txt_sign_Login1"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:gravity="center_horizontal"/>
        </LinearLayout>


</RelativeLayout>