<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context="com.androidtutorialpoint.ineed.proj.activities.LoginActivity">
 <ScrollView
     android:layout_above="@+id/flContent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:isScrollContainer="false">
     <LinearLayout
        android:id="@+id/ll_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <LinearLayout
                android:layout_weight="33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                android:id="@+id/image1"
                android:layout_weight="33"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_one"/>
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step1signup"
                    android:textSize="8sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image2"
                    android:layout_weight="33"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_two"/>
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step2signup"
                    android:textSize="8sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image3"
                    android:layout_weight="33"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_three"/>
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step3signup"
                    android:textSize="8sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
 </ScrollView>
    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">
    </FrameLayout>

</RelativeLayout>
